--- a/app/src/main/res/layout/activity_detail_location.xml
+++ b/app/src/main/res/layout/activity_detail_location.xml
@@ -10,110 +10,146 @@
             type="com.gitzblitz.locationviewer.viewmodel.DetailLocationViewModel" />
     </data>
 
-
-<androidx.constraintlayout.widget.ConstraintLayout
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".ui.DetailLocationActivity">
-
-
-    <TextView
-        android:id="@+id/location_name_detail_txt"
-        android:layout_width="wrap_content"
+    <androidx.cardview.widget.CardView
+        android:id="@+id/detail_cardView"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="32dp"
-        android:layout_marginTop="44dp"
-        android:text="@{viewmodel.detailLocationName}"
-        android:textSize="30sp"
-        android:textStyle="bold"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:text="@string/location_name" />
-
-    <TextView
-        android:id="@+id/location_desc_detail_txt"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="32dp"
-        android:text="@{viewmodel.detailLocationDescription}"
-        android:textSize="18sp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/location_name_detail_txt" />
-
-    <TextView
-        android:id="@+id/longitude_detail_textView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="32dp"
-        android:layout_marginTop="24dp"
-        android:layout_marginBottom="8dp"
-        android:text="@{viewmodel.detailLocationLon}"
-        app:layout_constraintBottom_toTopOf="@+id/barrier"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/location_desc_detail_txt" />
-
-    <TextView
-        android:id="@+id/latitude_detail_txt"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="32dp"
-        android:layout_marginTop="24dp"
-        android:layout_marginBottom="8dp"
-        android:text="@{viewmodel.detailLocationLat}"
-        app:layout_constraintBottom_toTopOf="@+id/barrier"
-        app:layout_constraintStart_toEndOf="@+id/longitude_detail_textView"
-        app:layout_constraintTop_toBottomOf="@+id/location_desc_detail_txt" />
-
-    <androidx.constraintlayout.widget.Barrier
-        android:id="@+id/barrier"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:barrierDirection="bottom"
-        tools:layout_editor_absoluteY="731dp" />
+        android:layout_margin="8dp"
+        app:contentPadding="2dp">
 
 
-    <TextView
-        android:id="@+id/location_temp_detail_txt"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="28dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginBottom="8dp"
-        android:text="@{viewmodel.detailTemperature}"
-        android:textSize="30sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/barrier"
-        app:layout_constraintVertical_bias="0.126" />
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            tools:context=".ui.DetailLocationActivity">
 
-    <TextView
-        android:id="@+id/temp_label_text_view"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="32dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginBottom="8dp"
-        android:text="@string/weather_info_detail_txt"
-        app:layout_constraintBottom_toTopOf="@+id/location_temp_detail_txt"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/barrier"
-        app:layout_constraintVertical_bias="0.129" />
 
-    <TextView
-        android:id="@+id/weather_fetched_timestamp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="12dp"
-        android:layout_marginEnd="8dp"
-        android:text="@{viewmodel.detailTimeFetched}"
-        android:textSize="12sp"
-        android:textStyle="italic"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.864"
-        app:layout_constraintStart_toEndOf="@+id/temp_label_text_view"
-        app:layout_constraintTop_toTopOf="@+id/barrier" />
+            <TextView
+                android:id="@+id/location_name_detail_txt"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="32dp"
+                android:layout_marginTop="44dp"
+                android:text="@{viewmodel.detailLocationName}"
+                android:textSize="30sp"
+                android:textStyle="bold"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                tools:text="@string/location_name" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+            <TextView
+                android:id="@+id/location_desc_detail_txt"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="32dp"
+                android:layout_marginTop="8dp"
+                android:text="@{viewmodel.detailLocationDescription}"
+                android:textSize="18sp"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/location_name_detail_txt"
+                tools:text="@string/location_description" />
+
+            <TextView
+                android:id="@+id/textView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textStyle="bold"
+                android:layout_marginStart="32dp"
+                android:layout_marginTop="20dp"
+                android:textSize="14sp"
+                android:text="@string/coordinates"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/location_desc_detail_txt" />
+
+            <TextView
+                android:id="@+id/longitude_detail_textView"
+                android:layout_width="wrap_content"
+                android:layout_height="19dp"
+                android:layout_marginStart="32dp"
+                android:layout_marginTop="8dp"
+                android:layout_marginBottom="8dp"
+                android:text="@{viewmodel.detailLocationLon}"
+                android:textAlignment="center"
+                app:layout_constraintBottom_toTopOf="@+id/barrier"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/textView"
+                app:layout_constraintVertical_bias="0.0"
+                tools:text="@string/longitude" />
+
+            <TextView
+                android:id="@+id/latitude_detail_txt"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="8dp"
+                android:layout_marginEnd="8dp"
+                android:layout_marginBottom="8dp"
+                android:text="@{viewmodel.detailLocationLat}"
+                app:layout_constraintBottom_toTopOf="@+id/barrier"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.043"
+                app:layout_constraintStart_toEndOf="@+id/longitude_detail_textView"
+                app:layout_constraintTop_toBottomOf="@+id/textView"
+                app:layout_constraintVertical_bias="0.0"
+                tools:text="@string/latitude" />
+
+            <androidx.constraintlayout.widget.Barrier
+                android:id="@+id/barrier"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:barrierDirection="bottom"
+                tools:layout_editor_absoluteY="731dp" />
+
+
+            <TextView
+                android:id="@+id/location_temp_detail_txt"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="32dp"
+                android:layout_marginTop="8dp"
+                android:layout_marginBottom="32dp"
+                android:text="@{viewmodel.detailTemperature}"
+                android:textSize="30sp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="@+id/barrier"
+                app:layout_constraintVertical_bias="1.0"
+                tools:text="@string/temperature_detail" />
+
+            <TextView
+                android:id="@+id/temp_label_text_view"
+                android:layout_width="wrap_content"
+                android:layout_height="19dp"
+                android:layout_marginStart="32dp"
+                android:layout_marginTop="16dp"
+                android:layout_marginBottom="8dp"
+                android:text="@string/weather_info_detail_txt"
+                android:textStyle="bold|italic"
+                app:layout_constraintBottom_toTopOf="@+id/location_temp_detail_txt"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="@+id/barrier"
+                app:layout_constraintVertical_bias="1.0" />
+
+            <TextView
+                android:id="@+id/weather_fetched_timestamp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="16dp"
+                android:layout_marginEnd="8dp"
+                android:layout_marginBottom="8dp"
+                android:text="@{viewmodel.detailTimeFetched}"
+                android:textSize="12sp"
+                android:textStyle="italic"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.944"
+                app:layout_constraintStart_toEndOf="@+id/temp_label_text_view"
+                app:layout_constraintTop_toTopOf="@+id/barrier"
+                app:layout_constraintVertical_bias="0.896"
+                tools:text="@string/timestamp" />
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+    </androidx.cardview.widget.CardView>
 
 </layout>
